<resources>
    <string name="app_name">TestApp</string>
    <string name="select_category">Select category</string>
    <string name="product_details">Product details</string>
    <string name="best_seller">Best Seller</string>
    <string name="see_more">See more</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="my_cart">My Cart</string>
    <string name="buy_now">Buy now!</string>
    <string name="add_address">Add address</string>
    <string name="splash_text">Ecommerce Concept</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_code">QR code</string>
    <string name="find_something">Find something</string>
    <string name="filter_icon">filter icon</string>
    <string name="location_example">Zihuatanejo, Gro</string>
    <string name="dropdown">dropdown</string>
    <string name="location">location</string>
    <string name="favorite_icon_text">favorite icon</string>
    <string name="product_image">product image</string>
    <string name="hot_sales_image">hot sales image</string>
    <string name="new_text">New</string>
    <string name="view_all">view all</string>
    <string name="hot_sales">Hot sales</string>
    <string name="explorer">Explorer</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="product_details_text">Product Details</string>
    <string name="exynos_990">Exynos 990</string>
    <string name="add_to_cart_text">Add to Cart</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="checkout">checkout</string>
    <string name="features_text">Features</string>
    <string name="details_radio">Details</string>
    <string name="shop_radio">Shop</string>
    <string name="camera">camera</string>
    <string name="processor">processor</string>
    <string name="sd">sd</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="_128_gb">128 GB</string>
    <string name="_256_gb">256 GB</string>
    <string name="remove_from_basket">remove from basket</string>
    <string name="minus_product">minus product</string>
    <string name="plus_product">plus product</string>
    <string name="_1">1</string>
    <string name="detailpagerimage">detailPagerImage</string>
    <string name="samsung">Samsung</string>
    <string name="_300_500">$300 - $500</string>
    <string name="_4_5_to_5_5_inches">4.5 to 5.5 inches</string>
    <string name="splashImage">splashImage</string>

    <string-array name="phones">

        <item>Samsung</item>
        <item>Xiaomi</item>
        <item>Iphone</item>

    </string-array>

    <string-array name="sizes">

        <item>4.5 to 5.5 inches</item>
        <item>5.5 to 6.5 inches</item>

    </string-array>

    <string-array name="prices">

        <item>$100 - $300</item>
        <item>$300 - $500</item>
        <item>$500 - $700</item>
        <item>$700 - $1000</item>
        <item>$1000 - $10000</item>

    </string-array>

</resources>