<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/blue"
    android:layout_marginBottom="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/basketProductContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/basketProductImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/product_image" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/basketProductTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/mark_pro_bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/basketProductContainer"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Galaxy Note 20 Ultra" />

    <TextView
        android:id="@+id/basketProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mark_pro_bold"
        android:textColor="@color/orange"
        android:textSize="18sp"
        tools:text="$3000"
        app:layout_constraintStart_toEndOf="@+id/basketProductContainer"
        app:layout_constraintTop_toBottomOf="@+id/basketProductTitle" />

    <LinearLayout
        android:id="@+id/counterProductBlock"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/basket_counter_block_background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/basketProductTitle"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:backgroundTint="@color/basket_counter_background"
            android:contentDescription="@string/plus_product"
            android:foreground="@drawable/ic_baseline_add_24"
            android:textColor="@color/white"
            app:borderWidth="0dp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/basketProductCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:backgroundTint="@color/basket_counter_background"
            android:contentDescription="@string/minus_product"
            android:foreground="@drawable/ic_baseline_remove_24"
            android:textColor="@color/white"
            app:borderWidth="0dp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/basketRemoveBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:background="@null"
        android:contentDescription="@string/remove_from_basket"
        android:src="@drawable/ic_baseline_delete_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/counterProductBlock"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>