<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment"
    android:background="@color/background_white">

    <Toolbar
        android:id="@+id/detailTopNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/detailBackButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:background="@drawable/cancel_button_background"
                app:backgroundTint="@null"
                app:icon="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/mark_pro_bold"
                android:text="@string/product_details_text"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <Button
                android:id="@+id/detailBasketButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:background="@drawable/done_button_background"
                android:backgroundTint="@color/orange"
                app:icon="@drawable/ic_shop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

    </Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/detailViewPagerContainer"
                android:layout_width="266dp"
                android:layout_height="335dp"
                android:elevation="20dp"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/detailViewPager"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"/>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:cardCornerRadius="20dp"
                android:elevation="20dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailViewPagerContainer">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardConstraint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="40dp">

                    <LinearLayout
                        android:id="@+id/titleBlock"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:id="@+id/detailTitle"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Galaxy Note 20 Ultra"
                            android:fontFamily="@font/mark_pro_bold"
                            android:textSize="24sp"
                            android:textColor="@color/blue"/>

                        <Button
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_weight="0"
                            android:background="@drawable/cancel_button_background"
                            app:backgroundTint="@null"
                            app:icon="@drawable/ic_baseline_favorite_border_24_white"
                            tools:ignore="SpeakableTextPresentCheck" />

                    </LinearLayout>

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:numStars="5"
                        android:rating="4.5"
                        android:theme="@style/MyRatingBar"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/titleBlock"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/toggleGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="24dp"
                        app:singleSelection="true"
                        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                        android:gravity="center">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shop_radio"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details_radio"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/features_text"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                    </com.google.android.material.button.MaterialButtonToggleGroup>

                    <ImageView
                        android:id="@+id/cpIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/ic_processor"
                        app:layout_constraintEnd_toEndOf="@+id/cpText"
                        app:layout_constraintStart_toStartOf="@+id/cpText"
                        app:layout_constraintTop_toBottomOf="@id/toggleGroup"
                        android:contentDescription="@string/processor" />

                    <TextView
                        android:id="@+id/cpText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/mark_pro"
                        android:text="@string/exynos_990"
                        android:textColor="@color/light_gray"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cpIcon" />

                    <ImageView
                        android:id="@+id/cameraIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/ic_camera"
                        app:layout_constraintEnd_toEndOf="@+id/cameraText"
                        app:layout_constraintStart_toStartOf="@+id/cameraText"
                        app:layout_constraintTop_toBottomOf="@id/toggleGroup"
                        android:contentDescription="@string/camera" />

                    <TextView
                        android:id="@+id/cameraText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/mark_pro"
                        tools:text="108 + 12 mp"
                        android:textColor="@color/light_gray"
                        android:textSize="12sp"
                        app:layout_constraintStart_toEndOf="@id/cpText"
                        app:layout_constraintTop_toBottomOf="@+id/cpIcon" />

                    <ImageView
                        android:id="@+id/operativeMemoryIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/ic_hard_memory"
                        app:layout_constraintEnd_toEndOf="@+id/operativeMemoryText"
                        app:layout_constraintStart_toStartOf="@+id/operativeMemoryText"
                        app:layout_constraintTop_toBottomOf="@id/toggleGroup"
                        android:contentDescription="@string/qr_code" />

                    <TextView
                        android:id="@+id/operativeMemoryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:fontFamily="@font/mark_pro"
                        tools:text="8 GB"
                        android:textColor="@color/light_gray"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/hardMemoryText"
                        app:layout_constraintTop_toBottomOf="@+id/operativeMemoryIcon" />

                    <ImageView
                        android:id="@+id/hardMemoryIcon"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/ic_hard_memory"
                        app:layout_constraintEnd_toEndOf="@+id/hardMemoryText"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/hardMemoryText"
                        app:layout_constraintTop_toBottomOf="@id/toggleGroup"
                        android:contentDescription="@string/sd" />

                    <TextView
                        android:id="@+id/hardMemoryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/mark_pro"
                        tools:text="256 GB"
                        android:textColor="@color/light_gray"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/hardMemoryIcon" />

                    <TextView
                        android:id="@+id/detailSelectColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/mark_pro_bold"
                        android:text="@string/select_color_and_capacity"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cpText" />

                    <RadioGroup
                        android:id="@+id/colorRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailSelectColor">

                        <RadioButton
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_baseline_circle_24"
                            android:backgroundTint="@color/blue"
                            android:layout_marginEnd="16dp"
                            android:elevation="5dp"
                            android:button="@drawable/ic_baseline_check_24"/>

                        <RadioButton
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_baseline_circle_24"
                            android:backgroundTint="@color/brown"
                            android:elevation="5dp"
                            android:button="@drawable/ic_baseline_check_24"/>

                    </RadioGroup>

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/toggleGroupMemory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="16dp"
                        app:singleSelection="true"
                        app:layout_constraintTop_toBottomOf="@+id/detailSelectColor"
                        android:gravity="center">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_128_gb"
                            style="@style/Widget.MaterialComponents.Button.TextButton"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_256_gb"
                            style="@style/Widget.MaterialComponents.Button.TextButton"/>

                    </com.google.android.material.button.MaterialButtonToggleGroup>

                    <LinearLayout
                        android:id="@+id/addToCartBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/done_button_background"
                        android:elevation="10dp"
                        android:layout_marginTop="32dp"
                        android:paddingHorizontal="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/toggleGroupMemory"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mark_pro_bold"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:text="@string/add_to_cart_text" />

                        <TextView
                            android:id="@+id/detailPriceProduct"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mark_pro_bold"
                            android:text="@string/add_to_cart_text"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
